Fix description contrast for Paccessibility
 🐿 v0.0.0

--- a/demos/src/demo.scss
+++ b/demos/src/demo.scss
@@ -57,5 +57,5 @@
 	font-style: italic;
 	font-size: 1.2em;
 	margin: 12px 0;
-	color: getColor('black-50');
+	color: getColor('black-70');
 }
